[tool.poetry]
name = "st_lucia_undistort"
version = "0.1.0"
description = ""
authors = ["Saravanabalagi Ramachandran <saravanabalagi@hotmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
opencv-python = "^4.5.4"
jupyter = "^1.0.0"
pandas = "^1.3.4"
imshowtools = "^0.6.5"
tqdm = "^4.62.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
